# Sudoku-Solver

./: .gitignore  DataPrep.ipynb  DataPrep.py  DigitRecognizerTrain.ipynb  README.md  Safeimagekit-resized-imgjpg  SudokuReader.ipynb  SudokuTest.ipynb  digit_recognizer.py  gui.py  helpers.py  main.py  pyproject.toml  solver.py  sudoku.py  sudoku_reader.py  testing.ipynb  tfdata.ipynb
digit_recognizer/: keras_metadata.pb  saved_model.pb
digit_recognizer/variables/: variables.index
old/: README.md  digit_recognizer.py  main.py  requirements.txt  solver.py  sudoku_reader.py
old/digit_recognizer/: keras_metadata.pb
old/digit_recognizer/variables/: variables.index
saved_model/my_model/: keras_metadata.pb  saved_model.pb
saved_model/my_model/variables/: variables.index
