[project]
name = "aidoku"
version = "0.1.0"
description = "Solving sudoku"
authors = [
    {name = "Chibuikem Alex Oparaoji", email = "coparaoji@gmail.com"},
]
dependencies = ["opencv-python>=4.11.0.86", "numpy<2", "scikit-learn>=1.6.1", "tensorflow>=2.14.0"]
requires-python = ">=3.8, <=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
